--- a/Amazon_search.ipynb
+++ b/Amazon_search.ipynb
@@ -125,7 +125,7 @@
     "        data = scrape(url) \n",
     "        if data:\n",
     "            for product in data['products']:\n",
-    "                product['search_url'] = inputurl\n",
+    "                product['search_url'] = url\n",
     "                print(\"Saving Product: %s\"%product['title'])\n",
     "                json.dump(product,outfile)\n",
     "                outfile.write(\"\\n\")\n",
